<resources>
    <string name="app_name">Digital Keyboard</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divider">/</string>
    <string name="equals">=</string>
    <string name="delite">del</string>
    <string name="clear">c</string>
    <string name="percent">%</string>
    <string name="switch_text">светлая тема</string>
    <string name="title_activity_change_theme">ChangeThemeActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="btn_night_text">ночнаая тема</string>
    <string name="btn_no_night_text">дневная тема</string>
    <string name="btn_settings_text">Настройки</string>
</resources>